--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
             <div class="row">
                 <div class='col-12'>
-                    <a href="" class="btn btn-success">Add new Singer</a>
+                    <a href="/add-singer" class="btn btn-success">Add new Singer</a>
                 </div>
             </div>
             <br>
