--- a/views/add-singer.ejs
+++ b/views/add-singer.ejs
@@ -12,18 +12,18 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-6">
-                <form>
+                <form method="POST" action="/add-singer">
                     <div class="form-group">
                         <label>Name</label>
-                        <input type="text" class="form-control" placeholder="Enter name">
+                        <input type="text" class="form-control" name="name" placeholder="Enter name">
                     </div>
                     <div class="form-group">
                         <label>Link</label>
-                        <input type="text" class="form-control" placeholder="Enter link">
+                        <input type="text" class="form-control" name="link" placeholder="Enter link">
                     </div>
                     <div class="form-group">
                         <label>Avatar</label>
-                        <input type="text" class="form-control" placeholder="Enter avatar">
+                        <input type="text" class="form-control" name="avatar" placeholder="Enter avatar">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
