--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,8 +39,10 @@
                                     <img height="150px" src="<%=avatarLink+singer.avatar%>">
                                 </td>
                                 <td>
-                                    <a href="" class="btn btn-warning">Update</a>
-                                    <a href="" class="btn btn-danger">Delete</a>
+                                    <a href="/update/<%=singer.id%>" class="btn btn-warning">
+                                    Update
+                                    </a>
+                                    <a href="#" class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
                             <% })%>
