--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
                                     <a href="/update/<%=singer.id%>" class="btn btn-warning">
                                     Update
                                     </a>
-                                    <a href="#" class="btn btn-danger">Delete</a>
+                                    <a href="/delete/<%=singer.id%>" onclick="return confirm('Are you sure?')"  class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
                             <% })%>
